2002-07-31  Dietmar Maurer  <dietmar@ximian.com>

	* x86/tramp.c: remove code to handle PInvoke because this is no
	longer needed.
	(mono_create_method_pointer): return method->addr for pinvoke methods

Fri Jul 19 14:18:36 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: fix float loads. Simple delegate marshaling fix.

2002-07-08  Radek Doulik  <rodo@ximian.com>

	* ppc/tramp.c: marshaling for SZARRAY

2002-07-05  Radek Doulik  <rodo@ximian.com>

	* ppc/tramp.c: removed magic hack

Tue Jun 18 10:21:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: marshal simple arrays correctly.

2002-05-27  Miguel de Icaza  <miguel@ximian.com>

	* x86/x86-codegen.h: Set the standard header format.

2002-05-23  Dietmar Maurer  <dietmar@ximian.com>

	* x86/tramp.c (mono_create_method_pointer): removed the magic
	trick to store the function pointer in the prolog and use the same
	mechanism as in the jit.

2002-05-13  Radek Doulik  <rodo@ximian.com>

	* ppc/tramp.c (emit_save_parameters): fix I8 parameters

2002-05-06  Sergey Chaban  <serge@wildwestsoftware.com>

	* x86/x86-codegen.h: added missing shifts;
	8-bit ALU operations (reg-reg);
	macro for FPU ops with integer operand;
	FIST macro (without pop);

Mon Apr 22 12:57:31 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* x86/x86-codegen.h: added loop instructions and made x86_patch fully
	useful.

2002-04-20  Dietmar Maurer  <dietmar@ximian.com>

	* x86/tramp.c (mono_create_trampoline): support internalcall
	String constructors

Sat Apr 6 16:29:40 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: fix advancement of argument position on the stack.

Sat Mar 16 19:12:57 CET 2002 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: increase default allocated size for trampolines
	and assert on overflow.

2002-03-14  Dietmar Maurer  <dietmar@ximian.com>

	* x86/tramp.c (mono_create_trampoline): dont use fld/fst to copy
	R8 values

Mon Mar 11 16:14:29 CET 2002 Paolo Molaro <lupus@ximian.com>
