@@ -1,3 +1,8 @@
+2002-08-01  Dietmar Maurer  <dietmar@ximian.com>
+
+	* interp.c (stackval_from_data): add pinvoke argument
+	(stackval_to_data): add pinvoke argument. We need consider the
+	fact that unmanages structures may have different sizes.
 
 Wed Jul 31 17:47:11 CEST 2002 Paolo Molaro <lupus@ximian.com>
 
