@@ -1,3 +1,8 @@
+2002-08-01  Dietmar Maurer  <dietmar@ximian.com>
+
+	* x86/tramp.c (mono_create_method_pointer): allocate space for
+	value types.
+
 2002-07-31  Dietmar Maurer  <dietmar@ximian.com>
 
 	* x86/tramp.c: remove code to handle PInvoke because this is no
